packagekit: Fix overflow in changelog table column
With PackageKit backends that return Markdown, the changelog cell
contains a `<Markdown>` element which always gets rendered as a `<p>`.
This doesn't inherit the `<td>`'s ellipsis/overflow properties, so
adjust CSS to apply these to the paragraph as well. The <Markdown>
paragraph also implies a non-zero `margin-bottom` which breaks the table
layout, so reset that too.

Add a long markdown changelog to the mock updates to test both cases at
the same time.

Fixes #8963
Closes #8971

--- a/pkg/packagekit/updates.less
+++ b/pkg/packagekit/updates.less
@@ -14,8 +14,9 @@ tr.listing-ct-item {
     td.type {
         white-space: nowrap;
     }
-    td.changelog {
+    td.changelog, td.changelog p {
         max-width: 60vw;
+        margin-bottom: 0;  // counter-act <Markdown>
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
